<resources>
    <string name="app_name">Kasitom ADMIN</string>
    <string name="title_create">Input Data</string>
    <string name="title_read">Read Data</string>
    <string name="title_ud">U/D Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MasukkanJudul">Masukkan Judul</string>
    <string name="MasukkanArti">Masukkan Arti</string>
    <string name="Submit">Submit</string>
    <string name="updatedata">Update Data</string>
    <string name="MasukkanSoal">Masukkan Soal</string>
    <string name="optionA">Option A</string>
    <string name="optionB">Option B</string>
    <string name="optionC">Option C</string>
    <string name="optionD">Option D</string>
    <string name="pilihOption">Jawaban Benar ?</string>

    <string-array name="option">
        <item>Option A</item>
        <item>Option B</item>
        <item>Option C</item>
        <item>Option D</item>
    </string-array>

    <string-array name="level">
        <item>A - 1</item>
        <item>A - 2</item>
        <item>A - 3</item>
        <item>A - 4</item>
        <item>A - 5</item>
        <item>A - 6</item>
        <item>A - 7</item>
    </string-array>
</resources>
