<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="8dp"
    android:scrollbars="none"
    tools:context=".ui.createdata.QuizCreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/sp_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:entries="@array/option"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="@+id/edt_optionD"
            app:layout_constraintTop_toBottomOf="@+id/edt_optionD">
        </Spinner>

        <Spinner
            android:id="@+id/sp_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/level"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="@+id/sp_option"
            app:layout_constraintEnd_toEndOf="@+id/edt_optionD"
            app:layout_constraintTop_toTopOf="@+id/sp_option">

        </Spinner>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/sp_option"
            app:layout_constraintTop_toBottomOf="@+id/sp_option" />

        <EditText
            android:id="@+id/edt_optionA"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/optionA"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@+id/edt_soal"
            app:layout_constraintTop_toBottomOf="@+id/edt_soal" />

        <EditText
            android:id="@+id/edt_optionB"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/optionB"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@+id/edt_optionA"
            app:layout_constraintTop_toBottomOf="@+id/edt_optionA" />

        <EditText
            android:id="@+id/edt_optionC"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/optionC"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@+id/edt_optionB"
            app:layout_constraintTop_toBottomOf="@+id/edt_optionB" />

        <EditText
            android:id="@+id/edt_optionD"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/optionD"
            android:lines="1"
            app:layout_constraintStart_toStartOf="@+id/edt_optionC"
            app:layout_constraintTop_toBottomOf="@+id/edt_optionC" />

        <EditText
            android:id="@+id/edt_soal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/MasukkanSoal"
            android:lines="4"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>