<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_optionD"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:backgroundTint="#43A047"
            android:src="@drawable/ic_mode_edit_black_24dp" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:backgroundTint="#E53935"
            android:src="@drawable/ic_delete_forever_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/edt_optionB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/optionB"
        app:layout_constraintStart_toStartOf="@+id/edt_optionA"
        app:layout_constraintTop_toBottomOf="@+id/edt_optionA" />

    <TextView
        android:id="@+id/edt_optionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/optionC"
        app:layout_constraintStart_toStartOf="@+id/edt_optionB"
        app:layout_constraintTop_toBottomOf="@+id/edt_optionB" />

    <TextView
        android:id="@+id/edt_optionD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/optionD"
        app:layout_constraintStart_toStartOf="@+id/edt_optionC"
        app:layout_constraintTop_toBottomOf="@+id/edt_optionC" />

    <TextView
        android:layout_marginStart="24dp"
        android:id="@+id/edt_optionA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/optionA"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/tv_soal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dari pertanyaan tersebut yang merupakan sesuatu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>